--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -4,16 +4,10 @@
     .breadcrumbs{
         font-size: 12px;
         font-weight: 600;
-        margin-bottom: 16px;
-        a.ask-question{
-            height: 32px;
-            border-radius: 4px;
-            background-color: #125fac;            
-            color: @color-white;
-            padding: 7px 8px 6px;
+        margin-bottom: 22px;
+        a.ask-question{           
+            color: #0455a8;
             display: inline-block;
-            .sbf{margin: 0 4px;}
-            .sbf-ask-q:before{color: @color-white; font-size: 16px;}
         }
         span.question-category{
             margin: 0 2px;
