--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -5,6 +5,25 @@
     border-radius: 4px;
 }
 
+a.ask-question-mob{
+    width: 208px;
+    line-height: 32px;
+    border-radius: 4px;
+    background-color: #0455a8;
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+    color: @color-white;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: -0.5px;
+    text-align: center;
+    position: fixed;    
+    z-index: 3;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    bottom: 25px;
+}
+
 .empty-state {
     svg {
         width: 120px;
