--- a/Cloudents.Web/ClientApp/components/question/ask/askQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/ask/askQuestion.less
@@ -17,8 +17,14 @@
 
   .flex:not(:last-child) {
     margin-bottom: 17px;
+    &.last-text-block {
+      letter-spacing: -0.3px;
+      margin-bottom: 28px;    
+      @media (max-width: @screen-xs) { margin-bottom: 0px; }
+    }
   }
 
+  
 
   .back-button {
     float: right;
@@ -41,7 +47,7 @@
     width: 49px;
     height: 46px;
     border-radius: 4px;
-    background-color: #ffffff;
+    background-color: @color-white;
     box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
     top: 9px;
     position: relative;
@@ -66,11 +72,14 @@
 
   .text-blue {
     font-size: 15px;
-    font-weight: bold;
     line-height: 1.39;
     letter-spacing: 0;
-    color: #3532d5;
+    color: @color-main-purple;
     margin: 0;
+    &.my-points{
+      margin-bottom: 17px;
+      @media (max-width: @screen-xs) { margin-bottom: 0px; }
+    }
   }
 
   .small-bold {
@@ -86,12 +95,10 @@
 
     .text-blue {
       font-size: 18px;
-      font-weight: normal;
       letter-spacing: -0.4px;
 
       @media (max-width: @screen-xs) {
         font-size: 16px;
-
       }
     }
   }
@@ -100,34 +107,72 @@
     width: 100%;
     height: 41px;
     border: 1px solid #979797;
-    color: #3532d5;
+    color: @color-main-purple;
     padding: 10px;
     font-size: 14px;
     -webkit-appearance: menulist;
 
-    @media (max-width: @screen-xs) {
-      padding: 9px;
+    @media (max-width: @screen-xs) { padding: 9px; }
+  }
+
+  .submit-btn-wrap {
+    position: relative;
+    .error-message {
+      position: absolute;
+      top: -32px;
+      left: 0;
+      right: 0;
+      text-align: center;
+      color: red;
     }
   }
 
-  .last-text-block {
-    margin: 26px 0px 26px -1px;
-  
-    @media (max-width: @screen-xs) {
-      margin: -4px 0px 20px 2px;
+  .points-list{
+    list-style-type: none;
+    li{
+      min-width: 72px;
+      max-width: 82px;
+      line-height: 49px;
+      border-radius: 4px;
+      border: solid 1px #979797;
+      float: left;
+      margin-right: 8px;
+      padding: 0 15px;
+      
+      font-size: 18px;
+      letter-spacing: -0.5px;
+      text-align: center;
+      color: #888b8e;
+      cursor: pointer;
+      &.active{
+        background-color: @color-blue;
+        color: @color-white;
+        border-color: @color-blue;
+      }
+      &.other{
+        max-width: 233px;  
+        width: 233px;          
+        margin-right: 0px;
+        border-color: @color-blue;
+        text-align: left;
+        .sbf-hand-coin{
+          color: @color-blue;
+          margin-right: 32px;
+        }
+      }
+
+      @media (max-width: @screen-xs) {
+        min-width: 112px;
+        max-width: 152px;
+        margin-top: 16px;
+        &.pts-10{width: 114px;}
+        &.pts-20{width: 129px;}
+        &.pts-35{width: 145px;}
+        &.other{width: 224px; }
+      }
     }
   }
-.submit-btn-wrap {
-  position: relative;
-  .error-message {
-    position: absolute;
-    top: -32px;
-    left: 0;
-    right: 0;
-    text-align: center;
-    color: red;
-  }
-}
+
 
   .btn.ask_btn {
     position: relative;
@@ -146,8 +191,8 @@
     }
   }
   .ask_btn.primary {
-    background-color: #3532d5 !important;
-  }
+    background-color: @color-main-purple !important;
+  } 
 
 }
 
