Question details fixes

--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -84,6 +84,10 @@
             max-height: ~"calc(100vh - 68px)";
         }
    }
+
+    .answer-card:not(:hover) .accept-btn{
+        display: none;
+    }
 }
 
 
