--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -6,6 +6,7 @@
     box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
     min-height: 100px;
     width: 100%;
+    position: relative;
 
     p{margin: 17px 19px 17px 17px;}
 
@@ -58,11 +59,6 @@
              }
         }
 
-        .delete{
-            padding: 0 10px;
-            outline: none;
-            .sbf{font-size: 15px;margin-top: -15px;}
-        }
         .choosen-answer{
             color: #ff0000;
             font-size: 12px;
@@ -76,7 +72,17 @@
                 .sbf{font-size: 24px;}
              }
         }        
-    }    
+    }
+
+
+    .delete{
+        padding: 4px 8px;
+        outline: none;
+        position: absolute;
+        top: 10px;
+        right: 16px;
+        .sbf{font-size: 15px}
+    }
 
     .q-category{
         @media(max-width: @screen-xs){ font-size: 16px; }
