Added dialog of login request for unreg user when answering question + delete dialog

--- a/Cloudents.Web/ClientApp/components/helpers/user-block/user-block.less
+++ b/Cloudents.Web/ClientApp/components/helpers/user-block/user-block.less
@@ -4,20 +4,27 @@
     display: flex;
     font-size: 12px;
     align-items: center;
+    padding-left: 16px;
+    padding-top: 12px;
 
     .university,.name{display: none;}
-    
+
     .avatar {
         width: 32px;
         height: 32px;
-        border-radius: 15px;
+        border-radius: 100%;
         margin-right: 9px;
-        
-        background-image: url('./../img/user.png');
-        background-size: cover;
-        background-position: 50% 50%;
-        background-repeat: no-repeat;    
-        
+        background: blue;
+
+        span{
+            font-size: 16px;
+        }
+        //
+        //background-image: url('./../img/user.png');
+        //background-size: cover;
+        //background-position: 50% 50%;
+        //background-repeat: no-repeat;
+
     }
 
     .last-msg{ margin: 0;}
