fixed icon issue in login

--- a/Cloudents.Web/ClientApp/components/registration/signin.less
+++ b/Cloudents.Web/ClientApp/components/registration/signin.less
@@ -28,6 +28,18 @@
   .continue-btn{
     margin-top: 40px;
   }
+
+  .code-field input{
+    margin-top: 0;
+    padding-left: 50px;
+    margin-bottom: 4px;
+
+    ~ i {
+      position: absolute;
+      top: 14px;
+      left: 16px;
+    }
+  }
   .sigin-strip{
     font-size: 18px;
     font-weight: normal;
