--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -213,6 +213,12 @@
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
 }
 
+.limited-width(){
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
 // Size constants
 @navBarHeightMdAndUp: 120px;
 @mainNavHeightXsOnly: 120px; //TODO: fix to actual size (seperated from the verticals bar)
