--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -1,6 +1,7 @@
 ﻿@import "../../mixin.less";
 
 .p-result {
+    .limited-width();
     .first-grid {
         width: @resultsFilterWidth;
         .flexSameSize();
