--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -1,6 +1,7 @@
 @import "../../../mixin.less";
 
 .answer-question{
+    .limited-width();
     .breadcrumbs{
         font-size: 12px;
         font-weight: 600;
