Redesign preview block of attached files

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -295,9 +295,9 @@
     line-height: 19px;
     letter-spacing: -0.2px;    
     @media (max-width: @screen-xs) {
-      margin: 0 3px;
-      font-weight: bold;
+      margin: 0 3px;      
     }
+    &.bold{font-weight: bold;}
   }
 }
 
