--- a/Cloudents.Web/ClientApp/components/question/helpers/extended-text-area/extendedTextArea.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/extended-text-area/extendedTextArea.less
@@ -1,24 +1,24 @@
 @import "../../../../mixin.less";
 
 
-.question_area {
-  background-color: #c7c7ee;
-  height: 233px;
-  padding: 8px;
-
-  @media (max-width: @screen-xs) {
-    height: 249px;
-  }
+.question_area { 
 
   .textarea{
-    background-color: @color-white;
-    border-radius: 4px;
-    height: 100%;
+    background-color: #c7c7ee;  
+    padding: 8px;
+    height: 233px;   
+    @media (max-width: @screen-xs) {
+      height: 249px;
+    } 
+    
     display: flex;
     position: relative;
 
     .text-block{
+      background-color: @color-white;
       width: 100%;
+       height: 100%;
+       border-radius: 4px;   
       textarea {      
         resize: none;
         padding: 11px 9px 4px;
@@ -26,20 +26,10 @@
         height: 177px;
         overflow-y: auto;
         outline: none;
-        width: 100%;
-    
+        width: 100%;    
         @media (max-width: @screen-xs) {
           height: 192px;
         }      
-      }
-      &.with-preview{
-        width: ~"calc(100% - 160px)";
-        @media (max-width: @screen-xs) {
-          width: ~"calc(100% - 120px)";
-          textarea{ height: 165px;}
-          .actions_text{border: none;}
-        }       
-
       }
     }
 
@@ -60,78 +50,76 @@
         border: none;
       }
     }
+    
+  }
 
+  .files{
+    margin-top: 24px;
     .preview-list{
-      width: 160px;
-      display: flex;
       overflow: hidden;
-      margin: 8px;
+      padding: 1px;
       list-style-type: none;
       position: relative;
-      @media (max-width: @screen-xs) {
-        width: 120px;
-      }
-
-      .background{
-        background-blend-mode: multiply;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
-        opacity: 0.6;
-      }
-      
+      @media (max-width: @screen-xs) { }      
       li{
-        height: 100%;
-        width: 160px;
+        width: 104px;
+        height: 104px;
+        padding: 8px;
+        border-radius: 4px;
+        background-color: #ffffff;
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
         display: inline-flex;
-        margin-right: 8px;
+        margin: 0 8px 16px 0;
         position: relative;
+        float: left;
 
         @media (max-width: @screen-xs) {
-          width: 120px;
+          margin-right: 16px;
         }
 
-        .background,.hover-trash{
+        .hover-trash{
           position: absolute;
-          height: 100%;
-          width: 100%;
+          width: 24px;
+          height: 24px;
           display: none;
+          right: 2px;
+          top: 4px;
+          background-color: rgba(0, 0, 0, 0.2);
+          border-radius: 15px;
+          outline: none;
+          @media (max-width: @screen-xs) {
+            display: block;
+          }
         }
 
-        &.use-hover{
-          .hover-trash{
-            @media (max-width: @screen-xs) {
-              display: block;
-              width: 20px;
-              height: 20px;
-              right: 10px;
+        &.add-file{          
+          label{
+            line-height: 88px;
+            width: 100%;
+            text-align: center;
+            cursor: pointer;
+            .sbf{
+              transform: rotate(45deg);
+              color: @color-main-purple;
+              font-size: 16px;
             }
-          }
-
+          }          
         }
         .hover-trash{         
           z-index: 2;
           .sbf{
-            font-size: 21px;
-            width: 32px;
-            height: 32px;
-            border: solid 1px @color-white;
-            color: @color-white;
-            border-radius: 15px;
-
-            @media (max-width: @screen-xs) {
-              border: none;
-              font-size: 17px;
-            }
+            font-size: 12px;
+            color: @color-white;  
+            vertical-align: initial; 
           }
-        }        
-        
+        }  
         img{
-          width: 160px;
+          width: 88px;
+          height: 88px;
           object-fit: cover;
-          @media (max-width: @screen-xs) {
-            width: 120px;
-          }
+          border-radius: inherit;
         }
-        &.use-hover:hover{ 
+        &:hover{ 
           .hover-trash,.background{display: block;}
         }
       }
@@ -171,8 +159,6 @@
 
       .sbf{font-size: 16px; color: @color-white;}
     }
-
-    
   }
 
   
