--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -1,178 +1,211 @@
 @import "../../../../mixin.less";
 
 .question-card {
-    border-radius: 4px;
-    background-color: @color-white;
-    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
-    min-height: 100px;
+  border-radius: 4px;
+  background-color: @color-white;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+  min-height: 100px;
+  width: 100%;
+  position: relative;
+
+  p {
+    margin: 17px 19px 17px 17px;
+  }
+
+  .q-price {
+    height: 41px;
+    width: 105px;
+    overflow: hidden;
+    border-radius: 0 0 36px;
+    background-color: #f0f0f0;
+    border: solid 0.5px #dddddd;
+    border-top: 0;
+    border-left: 0;
+    font-size: 18px;
+
+    color: #47586a;
+    text-align: center;
+    padding-right: 15px;
+    display: inline-block;
+
+    span {
+      line-height: 40px;
+      display: block;
+      letter-spacing: -0.4px;
+    }
+  }
+
+  .q-answer {
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+    line-height: 32px;
+
+    .accept-btn {
+      width: 88px;
+      line-height: 32px;
+      border-radius: 4px;
+      background-color: #7ed321;
+      color: @color-white;
+      letter-spacing: -0.3px;
+      text-align: left;
+      font-size: 16px;
+      outline: none;
+      .sbf {
+        color: @color-white;
+        font-size: 16px;
+        margin: 0px 4px 0px 8px;
+      }
+      @media (max-width: @screen-xs) {
+        background: none;
+        width: auto;
+        span {
+          display: none;
+        }
+
+        .sbf {
+          font-size: 24px;
+          color: #bbbbbb;
+        }
+      }
+    }
+
+    .choosen-answer {
+      color: #ff0000;
+      font-size: 12px;
+      letter-spacing: -0.2px;
+      .sbf {
+        color: #7ed321;
+        font-size: 32px;
+      }
+      @media (max-width: @screen-xs) {
+        span {
+          display: none;
+        }
+
+        .sbf {
+          font-size: 24px;
+        }
+      }
+    }
+  }
+
+  .delete {
+    padding: 4px 8px;
+    outline: none;
+    position: absolute;
+    top: 10px;
+    right: 16px;
+    .sbf {
+      font-size: 15px
+    }
+  }
+
+  .q-category {
+    @media (max-width: @screen-xs) {
+      font-size: 16px;
+    }
+    font-size: 20px;
+
+    font-weight: bold;
+    color: #125fac;
+  }
+
+  .q-text {
+    @media (max-width: @screen-xs) {
+      font-size: 16px;
+    }
+    font-size: 20px;
+    line-height: 1.35;
+    letter-spacing: -0.4px;
+    text-align: left;
+    color: #4a4a4a;
+    &.answer {
+      margin-left: 55px;
+    }
+  }
+
+  .q-user-info {
+    bottom: 0;
+    height: 47px;
     width: 100%;
-    position: relative;
+    // border-top: 1px solid #ddd;
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    padding: 10px 10px 13px 17px;
+    justify-content: space-between;
+  }
 
-    p{margin: 17px 19px 17px 17px;}
+  .bottom-section .card-info {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 16px 15px 17px;
+    line-height: 32px;
+    align-items: flex-end;
 
-    .q-price{
-        height: 41px;
-        width: 105px;
-        overflow: hidden;
-        border-radius: 0 0 36px;
-        background-color: #f0f0f0;
-        border: solid 0.5px #dddddd;
-        border-top: 0;
-        border-left: 0;
-        font-size: 18px;
-
-        color: #47586a;
-        text-align: center;
-        padding-right: 15px;
-        display: inline-block;
-
-
-        span{ line-height: 40px; display: block;letter-spacing: -0.4px;}
+    .new-block {
+      display: flex;
+      align-items: flex-start;
     }
+    .files {
+      width: 30px;
+      margin-right: 19px;
+      height: 32px;
+      display: flex;
+      flex-direction: row;
 
-    .q-answer{
-        display: flex;
-        justify-content: space-between;
-        padding: 16px;
-        line-height: 32px;
-
-        .accept-btn{
-            width: 88px;
-            line-height: 32px;
-            border-radius: 4px;
-            background-color: #7ed321;
-            color: @color-white;
-            letter-spacing: -0.3px;
-            text-align: left;
-            font-size: 16px;
-            outline: none;
-            .sbf{
-                color: @color-white;
-                font-size: 16px;
-                margin: 0px 4px 0px 8px;
-            }
-            @media(max-width: @screen-xs){
-                background: none;
-                width: auto;
-                span{display: none;}
-                .sbf{font-size: 24px;color: #bbbbbb;}
-             }
+      .sbf-attach {
+        transform: rotate(260deg);
+        &::before {
+          transform: scale(1, -1);
+          font-size: 12px;
+          color: @color-grey;
         }
-
-        .choosen-answer{
-            color: #ff0000;
-            font-size: 12px;
-            letter-spacing: -0.2px;
-            .sbf{
-                color: #7ed321;
-                font-size: 32px;
-            }
-            @media(max-width: @screen-xs){
-                span{display: none;}
-                .sbf{font-size: 24px;}
-             }
-        }
-    }
-
-
-    .delete{
-        padding: 4px 8px;
-        outline: none;
-        position: absolute;
-        top: 10px;
-        right: 16px;
-        .sbf{font-size: 15px}
-    }
-
-    .q-category{
-        @media(max-width: @screen-xs){ font-size: 16px; }
-        font-size: 20px;
-
-        font-weight: bold;
-        color: #125fac;
-    }
-
-    .q-text{
-        @media(max-width: @screen-xs){ font-size: 16px; }
-        font-size: 20px;
-        line-height: 1.35;
-        letter-spacing: -0.4px;
-        text-align: left;
-        color: #4a4a4a;
-        &.answer{
-            margin-left: 55px;
-        }
-    }
-
-
-    .q-user-info{
-        bottom: 0;
-        height: 47px;
-        width: 100%;
-        // border-top: 1px solid #ddd;
-        display: flex;
-        align-items: center;
-        font-size: 12px;
-        padding: 10px 10px 13px 17px;
-        justify-content: space-between;
-    }
-
-    .bottom-section .card-info{
-        display: flex;
-        justify-content: space-between;
-        padding: 0px 16px 15px 17px;
-        line-height: 32px;
-        align-items: flex-end;
-
-        .new-block{display: flex; align-items: flex-start;}
-        .files{
-            width: 30px;
-            margin-right: 19px;
-            height: 32px;
-            display: flex;
-            flex-direction: row;
-
-            .sbf-attach{ transform: rotate(260deg);
-                &::before{transform: scale(1, -1);font-size: 12px;color: @color-grey;}
-            }
-            span{
-                color: @color-grey;
-                margin-left: 4px;
-                font-size: 16px;
-                // line-height: 1.69;
-                letter-spacing: -0.3px;
-            }
-
-        }
-        .users{
-            .avatar{
-              font-size: 32px;
-              color: black;
-              float: right;
-              margin-right: -7px;
-              border: 2px solid @color-white;
-            }
-        }
-
-        .user-counter{
-            font-size: 16px;
-            color: @color-grey;
-            line-height: 32px;
-            letter-spacing: -0.3px;
-            margin-left: 11px;
-        }
-
-        .answer{
-            display: flex;
-            line-height: 24px;
-            .answer-btn{
-                border-radius: 4px;
-                background-color: #0455a8;
-                font-size: 14px;
-                color: @color-white;
-                padding: 0px 20px;
-            }
-        }
+      }
+      span {
+        color: @color-grey;
+        margin-left: 4px;
+        font-size: 16px;
+        // line-height: 1.69;
+        letter-spacing: -0.3px;
+      }
 
     }
+    .users {
+      .avatar {
+        background: #4a4a4a;
+        width: 36px;
+        height: 36px;
+        float: right;
+        margin-right: -10px;
+        border: 2px solid @color-white;
+        i {
+          font-size: 10px;
+          color: white;
+        }
+      }
+    }
+
+    .user-counter {
+      font-size: 16px;
+      color: @color-grey;
+      line-height: 32px;
+      letter-spacing: -0.3px;
+      margin-left: 11px;
+    }
+
+    .answer {
+      display: flex;
+      line-height: 24px;
+      .answer-btn {
+        border-radius: 4px;
+        background-color: #0455a8;
+        font-size: 14px;
+        color: @color-white;
+        padding: 0px 20px;
+      }
+    }
+
+  }
 }      
