--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -19,6 +19,8 @@
     @media(max-width: @screen-xs){
         margin-top: 0
     }
+    @media(min-width: (@screen-xs+1)){  margin-top:16px;}
+    @media(min-width: (@screen-sm)){  margin-top: @marginTop;}
 }
 .sec-result {
     max-width: 608px;
