minor fix with gallery; start wallet page

--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -133,8 +133,9 @@
         margin: 16px;
         .carousel{
             height: 238px;
-            .carousel__left{left: 9px;}
-            .carousel__right{right: 9px;}
+            box-shadow: none;
+            .carousel__left{left: 9px;i.sbf{margin-right: 3px;}}
+            .carousel__right{right: 9px; i.sbf{margin-left: 4px;}}
             button{
                 width: 32px;
                 height: 32px;
@@ -143,7 +144,8 @@
                     background-color: #000000;
                 }
                 i.sbf{
-                    font-size: 22px;
+                    font-size: 20px;
+                    margin-top: 0px;
                     &.left{ transform: scale(-1,1);}
                 }
                 
