header design fixes

--- a/Cloudents.Web/ClientApp/components/helpers/searchInput.less
+++ b/Cloudents.Web/ClientApp/components/helpers/searchInput.less
@@ -3,6 +3,10 @@
 .search-input {
   display: flex;
   width: 100%;
+  max-width: 792px;
+  @media(min-width: @screen-xs) {
+    padding-right: 32px;
+  }
 
   .search-menu .type-AutoComplete .list__tile__title {
     color: black;
