--- a/Cloudents.Web/ClientApp/components/registration/steps/registerPhone/registerPhone.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerPhone/registerPhone.less
@@ -49,6 +49,9 @@
       @media (max-width: @screen-xs) {
         margin-top: 85px;
         margin-bottom: 20px;
+        .top{
+          padding-top: 6px;
+        }
       }
       
     }
