--- a/Cloudents.Web/ClientApp/components/header/verticalTabs.less
+++ b/Cloudents.Web/ClientApp/components/header/verticalTabs.less
@@ -21,10 +21,9 @@
     }
 
     .verticals-bar {
-        padding-left: 10px;
-
-        @media(max-width: 959px) {
-            padding-left: 0;
+        padding-left: 4px;
+        @media(max-width: @screen-sm) {
+            padding-left: 8px;
         }
 
         .tabs__bar {
@@ -36,9 +35,11 @@
 
         .tabs__bar .tabs__li {
             flex-basis: auto;
+            padding-bottom: 14px;
             @media(max-width: @screen-xs){
                 margin-right: 8px !important;
                 margin-bottom: 3px;
+                padding-bottom: 0;
             }
         }
     }
