--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -5,6 +5,10 @@
   &.toolbar {
     background-color: @color-white;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+    .toolbar__content {
+      .responsive-property(padding-right, 24px, 16px, 8px);
+      .responsive-property(padding-left, 24px, 16px, 8px);
+    }
   }
 
   .toolbar__items {
@@ -12,6 +16,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media(min-width: @screen-xs) {
+      padding-bottom: 8px;
+    }
   }
 
   .toolbar__content > .layout {
@@ -22,7 +29,8 @@
     .inTheMiddle();
     margin: 0;
     @media (max-width: (@screen-sm)) {
-      margin-left: 41px;
+      //margin-left: 41px;
+      margin-right: 14px;
       &.auth-user {
         margin-left: 66px;
       }
@@ -34,7 +42,6 @@
     //.inTheMiddle();
     display: flex;
     align-items: center;
-    padding-left: 16px;
 
     @media (min-width: (@screen-sm + 1)) {
       width: @logoWidth;
@@ -65,19 +72,19 @@
 
   .main {
     .limited-width();
-    .responsive-property(height, 60px, 85px, null);
+    .responsive-property(height, 60px, null, 85px);
     .responsive-property(padding-top, 12px, 0px, null);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
 
-
   .line {
     .limited-width();
-    padding-left: 16px;
-    padding-right: 16px;
     .responsive-property(max-height, 60px, 60px, 64px);
+    @media (max-width: @screen-xs) {
+      padding-top: 8px;
+    }
 
     @media (max-width: 959px) {
       &:nth-child(2) {
@@ -120,7 +127,6 @@
 
   .settings-wrapper {
     line-height: 32px;
-    margin-left: 20px;
     .btn--icon {
       @media (max-width: 959px) {
         margin-right: 0;
@@ -128,7 +134,7 @@
     }
     .header-login {
       height: 40px;
-      width: 104px;
+      //width: 104px;
       margin-right: 10px;
       border-radius: 26.5px;
       border: solid 1px @color-main-purple;
@@ -140,10 +146,11 @@
       justify-content: center;
       color: @color-main-purple;
       letter-spacing: -0.5px;
+      padding: 0 20px;
       @media (max-width: @screen-xs) {
         display: none;
       }
-      &:first-child{
+      &:first-child {
         margin-right: 24px;
       }
 
@@ -189,10 +196,6 @@
       color: #000;
       letter-spacing: -0.4px;
       font-size: 16px;
-
-      @media (max-width: @screen-xs) {
-        border-radius: 20px;
-      }
 
       .input-group__input {
         .input-group__append-icon.sbf-mic {
@@ -259,30 +262,27 @@
   position: relative;
 }
 
-.header-comments{
+.header-comments {
   // margin-right: 39px;
   height: 32px;
-  width: 39px;
+  //width: 39px;
+  padding-right: 24px;
+  border-right: 1px solid #dddddd;
+  margin-right: 20px;
   align-items: flex-end;
-  .sbf{color: @color-main-purple;}
-  .red-counter{ top: -7px; }
+  .sbf {
+    color: @color-main-purple;
+  }
+  .red-counter {
+    top: -7px;
+  }
 }
 
 .header-wallet {
   flex-direction: column;
-  line-height: 32px;
-  width: 104px;
-  border-left: 1px solid @Dividers;
-  height: 32px;
-  border-right: 1px solid @Dividers;
-  justify-content: center;
-  margin: 0 23px;
+  @media (max-width: @screen-sm) {
 
-  @media (max-width: @screen-xs) {
-    margin-right: 37px;
-    border: none;
-    margin-bottom: 3px;
-    flex-direction: row;
+    align-items: start;
   }
 
   .btn {
@@ -293,21 +293,19 @@
     font-size: 14px;
     color: @color-grey;
     line-height: 19px;
-    letter-spacing: -0.2px;    
+    letter-spacing: -0.2px;
     @media (max-width: @screen-xs) {
-      margin: 0 3px;      
+      margin: 0 3px;
     }
-    &.bold{font-weight: bold;}
+    &.bold {
+      white-space: nowrap;
+      font-weight: bold;
+    }
   }
 }
 
 .menu.gamburger, .header-rocket {
   @media (max-width: (@screen-xs)) {
-    position: fixed;
-    left: 9px;
-    top: 3px;
-
-    height: auto;
     .btn {
       margin: 0;
     }
@@ -315,14 +313,13 @@
 }
 
 .header-rocket {
-  // width: 72px;
+  height: 32px;
+  padding-left: 24px;
+  border-left: 1px solid #dddddd;
+  margin-left: 20px;
   height: 32px;
 
-  @media (max-width: @screen-xs) {
-    width: 56px;
-    top: 1px;
-  }
-  img{
+  img {
     height: 32px;
     width: 32px;
     border-radius: 50%;
