Adjusted stuff to support 1280px width limit

--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -6,7 +6,8 @@
 }
 
 a.ask-question-mob{
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
     @media(min-width: (@screen-md)){display: none; }
     @media(max-width: (@screen-md)){  display: block;}
     @media(max-width: (@screen-xs)){  display: block; margin: 16px auto;}
