--- a/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
+++ b/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
@@ -2,9 +2,9 @@
 
 .right-sidebar{    
     width: 400px;
-    max-width: 400px;
-    margin-left: 32px;
-    font-size: 14px;
+    //max-width: 400px;
+    //margin-left: 32px;
+    //font-size: 14px;
 
     @media (max-width: @screen-xs) { display: none; }
 
