--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -5,14 +5,14 @@
     .first-grid {
         width: @resultsFilterWidth;
         .flexSameSize();
-        padding: 0 50px 0 22px;
+        padding-right: 32px;
     }
 }
 
 
 //@spaceFromNavBar: @resultsTabsHeight + 40; //40 px of space according to Shlomi's request
 
-@marginTop: 42px;
+@marginTop: 24px;
 .main-section {
     min-width: 0;
     margin-top: @marginTop;
@@ -23,14 +23,18 @@
     @media(min-width: (@screen-sm)){  margin-top: @marginTop;}
 }
 .sec-result {
-    max-width: 608px;
+    width: 100%;
+    //max-width: 608px;
     //margin-top: @marginTop;
-    min-width: 0;
+    //min-width: 0;
 
-    @media(max-width: @screen-xs) {
-        margin: 0 8px;
-    }
+    //@media(max-width: @screen-xs) {
+    //    margin: 0 8px;
+    //}
     //margin-top: @spaceFromTop;
+    //.results-wrapper{
+        max-width: 608px;
+    //}
     .result-cell {
         border-radius: 4px;
         overflow: hidden;
@@ -135,6 +139,7 @@
     position: sticky;
     max-height: ~"calc(100vh - @{upperSpace} - 16px)"; //container padding from bottom is 16
     top: @upperSpace;
+    margin-left: 32px;
 
     .side-bar-wrapper {
         max-width: 300px;
