--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -6,6 +6,7 @@
     background-color: @color-white;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
     .toolbar__content {
+      .limited-width();
       .responsive-property(padding-right, 24px, 16px, 8px);
       .responsive-property(padding-left, 24px, 16px, 8px);
     }
@@ -71,7 +72,7 @@
   }
 
   .main {
-    .limited-width();
+    //.limited-width();
     .responsive-property(height, 60px, null, 85px);
     .responsive-property(padding-top, 12px, 0px, null);
     display: flex;
@@ -80,7 +81,7 @@
   }
 
   .line {
-    .limited-width();
+    //.limited-width();
     .responsive-property(max-height, 60px, 60px, 64px);
     @media (max-width: @screen-xs) {
       padding-top: 8px;
