Fixed site pages to support 1280px width

--- a/Cloudents.Web/ClientApp/components/header/verticalTabs.less
+++ b/Cloudents.Web/ClientApp/components/header/verticalTabs.less
@@ -1,6 +1,7 @@
 ﻿@import "../../mixin.less";
 
 .verticals.line {
+    .limited-width();
     @media(max-width: @screen-sm) {
         align-items: stretch;
     }
