--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -7,6 +7,7 @@
     min-height: 100px;
     height: 100%;
     width: 100%;
+    max-width: 608px;
     position: relative;
 
   p {
@@ -148,9 +149,9 @@
                     margin-top: 0px;
                     &.left{ transform: scale(-1,1);}
                 }
-                
+
             }
-            
+
         }
     }
 
