--- a/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
+++ b/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
@@ -1,7 +1,7 @@
 @import "../../../../mixin.less";
 
 .right-sidebar{    
-    width: 400px;
+    //width: 400px;
     //max-width: 400px;
     //margin-left: 32px;
     //font-size: 14px;
