--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -2,11 +2,18 @@
 
 .answer-question{
     .limited-width();
+    @media(max-width: @screen-sm){
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .question-wrap{
+        margin-left: @logoWidth;
+    }
     .breadcrumbs{
         font-size: 12px;
         font-weight: 600;
         margin-bottom: 22px;
-        a.ask-question{           
+        a.ask-question{
             color: #0455a8;
             display: inline-block;
         }
@@ -15,18 +22,23 @@
             color: #4a4a4a;
         }
     }
-
-    .my-question{
-        max-width: @screen-xs;
+    .question-data{
+        max-width: 608px;
+        width: 100%;
     }
-
+    .chat-wrapper{
+        width: 100%;
+        max-width: 304px;
+        margin-left: 32px;
+    }
     .md5{margin-left: 17px;}
 
     .xs4{margin: 0 17px;}
-    
-    .user-question {
-        margin-bottom: 17px;
+
+    .question-card{
+        margin: 0 auto;
     }
+
     .add_answer{
         border: 8px solid #c7c7ee !important;
         border-top: 0px !important;
@@ -56,13 +68,13 @@
         .tabs__item{
             text-transform: none;
             &.tabs__item--active{ color: #3532d5!important;font-weight: bold;}
-        } 
-        
+        }
+
         .tabs__slider.blue{
             border-bottom: 2px solid #3532d5;
         }
     }
-    
+
    .show-form-trigger{
        background: white;
        border: 8px solid #c7c7ee;
