--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -146,6 +146,8 @@
       color: @color-main-purple;
       letter-spacing: -0.5px;
       padding: 0 20px;
+      width: 100%;
+      min-width: 104px;
       @media (max-width: @screen-xs) {
         display: none;
       }
