--- a/Cloudents.Web/ClientApp/components/registration/signin.less
+++ b/Cloudents.Web/ClientApp/components/registration/signin.less
@@ -6,24 +6,8 @@
   .input-wrapper{
     margin-top: 24px;
   }
-  .checkbox-wrap{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: 16px;
-    margin-bottom: 28px;
-
-    input{
-      width: 10px;
-      height: 10px;
-    }
-    label{
-      font-size: 10px;
-      margin-bottom: 1px;
-      letter-spacing: -0.3px;
-      color: #9b9b9b;
-      margin-left: 8px;
-    }
+  .recaptcha-wrapper{
+    margin-top: 32px;
   }
   .continue-btn{
     margin-top: 40px;
