small fixes to user page & some mixin variable added

--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -7,7 +7,7 @@
     min-height: 100px;
     height: 100%;
     width: 100%;
-    max-width: 608px;
+    max-width: @cellWidth;
     position: relative;
 
   p {
