--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -23,7 +23,7 @@
         }
     }
     .question-data{
-        max-width: 608px;
+        max-width: @cellWidth;
         width: 100%;
     }
     .chat-wrapper{
