--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -166,7 +166,7 @@ a.ask-question-mob{
     }
 }
 /*#region item skeleton*/
-@skeletonWidth: 608px;
+@skeletonWidth: @cellWidth;
 @cardHeight: 184px;
 @cardImageHeight: 160px;
 @titleHeight: 16px;
