--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -23,7 +23,7 @@
     @media(min-width: (@screen-sm)){  margin-top: @marginTop;}
 }
 .sec-result {
-    max-width: 608px;
+    max-width: @cellWidth;
     width: 100%;
     //max-width: 608px;
     //margin-top: @marginTop;
@@ -41,7 +41,7 @@
         overflow: hidden;
         position: relative;
         width: 100%;
-        max-width: 608px;
+        max-width: @cellWidth;
         /*@media(max-width: 599px) {
             margin-left: 8px;
             margin-right: 8px;
