--- a/Cloudents.Web/ClientApp/components/profile/profile.less
+++ b/Cloudents.Web/ClientApp/components/profile/profile.less
@@ -6,6 +6,8 @@
 
     @media (max-width: @screen-xs) {
         margin-top: 0;
+        padding-right: 0;
+        padding-left: 0;
     }
 
     .container{
@@ -46,6 +48,7 @@
         @media (max-width: @screen-xs) {
             width: 100%;
             margin-left: 0;
+            border-radius: 0;
         }
 
         .menu{
