--- a/Cloudents.Web/ClientApp/components/registration/signin.less
+++ b/Cloudents.Web/ClientApp/components/registration/signin.less
@@ -34,4 +34,15 @@
     text-align: center;
     color: #888b8e;
   }
+
+  /* For Firefox */
+  input[type='number'] {
+    -moz-appearance:textfield;
+  }
+  /* Webkit browsers like Safari and Chrome */
+  input[type=number]::-webkit-inner-spin-button,
+  input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
