--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -86,29 +86,43 @@
         letter-spacing: -0.4px;
         border: none;
 
-        thead{ background-color: #f3f3ff;font-weight: bold;}
+        thead{ background-color: #f3f3ff;}
 
-        .total,th{color: @color-main-purple; }
+        .total,th{color: @color-main-purple; font-weight: normal;}
         .number{ border-right: solid 2px @color-medium-grey; }
 
         tr{height: 48px;}
         td{ text-align: center; }
         tr:nth-child(2n){background-color: @color-light-grey; }
-        td:nth-child(2){
-            text-align: left; 
-            padding-left: 34px;
-            @media (max-width: @screen-xs) {padding-left: 16px;}
-         }
-        td:nth-child(4),th:nth-child(4){
-            text-align: right;
-            @media (max-width: @screen-xs) {padding-right: 22px;}
-        }  
         
-        @media (max-width: @screen-xs) {
-            td:nth-child(1),th:nth-child(1),td:nth-child(5),th:nth-child(5){
-                display: none;
-            }
-         }
+
+        &.balances{
+            td:nth-child(2){
+                text-align: left; 
+                padding-left: 34px;
+                @media (max-width: @screen-xs) {padding-left: 16px;}
+             }
+            td:nth-child(4),th:nth-child(4){
+                text-align: right;
+                @media (max-width: @screen-xs) {padding-right: 22px;}
+            }  
+
+            @media (max-width: @screen-xs) {
+                td:nth-child(1),th:nth-child(1),td:nth-child(5),th:nth-child(5){
+                    display: none;
+                }
+             }
+        }
+
+        &.transaction{
+            @media (max-width: @screen-xs) {
+                td:nth-child(1),th:nth-child(1),td:nth-child(4),th:nth-child(4),td:nth-child(6),th:nth-child(6){
+                    display: none;
+                }
+             }
+        }
+        
+       
     }
 
     .cash-out,.cash-out-big{
