--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -98,9 +98,9 @@
         }
    }
 
-    .answer-card:not(:hover) .accept-btn{
-        display: none;
-    }
+    //.answer-card:not(:hover) .accept-btn{
+    //    display: none;
+    //}
 }
 
 
