--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -38,7 +38,7 @@
   }
 
   .q-answer {
-    display: flex;
+    //display: flex;
     justify-content: space-between;
     padding: 16px;
     line-height: 32px;
