--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -151,7 +151,8 @@
     <script async>
         (function () {
             window.intercomSettings = {
-                app_id: "njmpgayv"
+                app_id: "njmpgayv",
+                 hide_default_launcher:true
             };
             var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', intercomSettings); } else {
                 var d = document; var i = function () { i.c(arguments) }; i.q = []; i.c = function (args) { i.q.push(args) }; w.Intercom = i; function l() {
