remove intercom and remove messages from header

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -225,7 +225,7 @@
   }
 
   .btn {
-    .sbf-3-dot, .sbf-wallet, .sbf-menu, .sbf-comment {
+    .sbf-3-dot, .sbf-wallet, .sbf-menu, .sbf-comment,.sbf-feedback {
       color: @color-main-purple;
       font-size: 17px;
       @media (max-width: @screen-xs) {
